force-app/main/default/objects/Eingriff__c/Eingriff__c.object-meta.xml
<CustomObject>
    <description>One event in the life of a charge point that § 37 MessEG cares about. The Eichfrist is not an eight-year timer - the industry counts more than 45,000 re-calibrations a year against an assumed 6,000, driven by cable replacement, maintenance and theft. So calibration status is computed from a chronology of events, and this object is that chronology. § 37 distinguishes three paths with three different consequences, which is why Typ__c is restricted and why three formula checkboxes derive the consequence rather than a person typing it.</description>
    <label>Eingriff</label>
    <nameField>
        <displayFormat>EG-{00000}</displayFormat>
        <label>Eingriff-Nr.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eingriffe</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>