force-app/main/default/objects/Eingriff__c/fields/Behoerde_informiert__c.field-meta.xml
<CustomField>
    <fullName>Behoerde_informiert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fourth condition: the authority was notified immediately. All four must hold together - any one missing and the repair falls back to Abs. 2 Nr. 2 and ends the Eichfrist early.</description>
    <label>Behörde unverzüglich informiert</label>
    <type>Checkbox</type>
</CustomField>