force-app/main/default/objects/Eingriff__c/fields/Beschreibung__c.field-meta.xml
<CustomField>
    <fullName>Beschreibung__c</fullName>
    <description>What was done. Free text on purpose - whether a given intervention CAN affect metrological properties is a judgement the operator records and the authority may test, not something a picklist should pretend to decide.</description>
    <label>Beschreibung</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>