force-app/main/default/objects/Eingriff__c/fields/Datum__c.field-meta.xml
<CustomField>
    <fullName>Datum__c</fullName>
    <description>When the event happened. Ordering matters more than any single date here: a later Nacheichung supersedes an earlier blocking Eingriff, which is precisely the chronology a roll-up COUNT cannot express and EichrechtService has to evaluate.</description>
    <label>Datum</label>
    <type>Date</type>
</CustomField>