force-app/main/default/objects/Eingriff__c/fields/Instandsetzer_befugt__c.field-meta.xml
<CustomField>
    <fullName>Instandsetzer_befugt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the repair was carried out by a befugtes Instandsetzungsunternehmen. First of the four conditions in § 37 Abs. 5 MessEG. Note that the authorisation is granted by the authority under § 54 MessEV and re-checked at least every five years - a firm can hold every manufacturer certificate and still be legally unable to repair a billing-relevant device.</description>
    <label>Befugter Instandsetzer</label>
    <type>Checkbox</type>
</CustomField>