force-app/main/default/objects/Eingriff__c/fields/Kennzeichnung_41__c.field-meta.xml
<CustomField>
    <fullName>Kennzeichnung_41__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Third condition: the repair is marked as required by § 41 MessEV.</description>
    <label>Kennzeichnung nach § 41 angebracht</label>
    <type>Checkbox</type>
</CustomField>