force-app/main/default/objects/Eingriff__c/fields/Ladepunkt__c.field-meta.xml
<CustomField>
    <fullName>Ladepunkt__c</fullName>
    <description>The charge point this event belongs to. Master-detail rather than lookup for one concrete reason: roll-up summary fields only exist on master-detail relationships, and the parent needs to count blocking events and take the latest calibration date declaratively so a list view can show compliance state without running Apex.</description>
    <label>Ladepunkt</label>
    <referenceTo>Ladepunkt__c</referenceTo>
    <relationshipLabel>Eingriffe</relationshipLabel>
    <relationshipName>Eingriffe</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>