force-app/main/default/objects/Eingriff__c/fields/Nacheichung_beantragt__c.field-meta.xml
<CustomField>
    <fullName>Nacheichung_beantragt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Second condition, § 37 Abs. 5 Nr. 2: die erneute Eichung unverzueglich beantragt wird. This is the trap in the exemption - the repair keeps the Eichfrist alive only if a re-calibration is applied for immediately. The industry asked the ministry in April 2026 to delete this Nummer precisely because of what it costs, which tells you it bites.</description>
    <label>Nacheichung unverzüglich beantragt</label>
    <type>Checkbox</type>
</CustomField>