force-app/main/default/objects/Eingriff__c/fields/Nacheichungsantrag_offen__c.field-meta.xml
<CustomField>
    <fullName>Nacheichungsantrag_offen__c</fullName>
    <description>True when a repair was made but the re-calibration has not been applied for. The point of this field is that Abs. 5 relief and Abs. 5 Nr. 2 burden arrive in the same sentence: the Eichfrist survives AND an application falls due immediately. Exempt is not nothing to do.</description>
    <formula>ISPICKVAL(Typ__c, &apos;Instandsetzung&apos;) &amp;&amp; NOT(Nacheichung_beantragt__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nacheichungsantrag offen</label>
    <type>Checkbox</type>
</CustomField>