force-app/main/default/objects/Eingriff__c/fields/Typ__c.field-meta.xml
<CustomField>
    <fullName>Typ__c</fullName>
    <description>Which of the three § 37 MessEG paths this event takes, because the consequence differs per path. Eingriff (Abs. 2 Nr. 2): an intervention that CAN affect metrological properties ends the Eichfrist early - the test is can, not did. Instandsetzung (Abs. 5): repair by an authorised repairer is exempt from that early termination, but only if all four conditions hold together. Software-Update (Abs. 6): the Eichfrist is expressly untouched, yet the device may not operate until the authority approves. Nacheichung: the re-calibration itself, which restarts the period.</description>
    <label>Typ</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eingriff</fullName>
            </value>
            <value>
                <fullName>Instandsetzung</fullName>
            </value>
            <value>
                <fullName>Software-Update</fullName>
            </value>
            <value>
                <fullName>Nacheichung</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>